--- a/index.html
+++ b/index.html
@@ -2,143 +2,147 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>HatVision — AI Hat Style Detector</title>
-
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+    <title>StreetFit AI — Hat Style Scanner</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
     <style>
         body {
             margin: 0;
-            font-family: 'Inter', sans-serif;
-            background: #0f0f0f;
-            color: white;
+            font-family: 'Poppins', sans-serif;
+            background: #0d0d0d;
+            color: #ffffff;
         }
 
         header {
-            background: #1a1a1a;
             padding: 20px;
             text-align: center;
             font-size: 32px;
             font-weight: 600;
-            border-bottom: 1px solid #333;
+            background: #111;
+            border-bottom: 1px solid #222;
         }
 
         .container {
-            width: 90%;
             max-width: 1100px;
             margin: auto;
-            padding-top: 30px;
+            padding: 30px;
         }
 
-        .section {
-            background: #161616;
-            padding: 20px;
-            border-radius: 12px;
-            margin-bottom: 25px;
+        .card {
+            background: #151515;
             border: 1px solid #2a2a2a;
+            border-radius: 14px;
+            padding: 20px;
+            margin-bottom: 25px;
         }
 
-        h2, h3 {
+        h2 {
             margin-top: 0;
         }
 
         button {
-            background: #0066ff;
+            background: #ff3c38;
             color: white;
             border: none;
-            padding: 12px 20px;
+            padding: 12px 22px;
             border-radius: 8px;
-            cursor: pointer;
             font-size: 16px;
+            cursor: pointer;
             margin-bottom: 15px;
         }
 
         button:hover {
-            background: #0052cc;
+            background: #e6322e;
         }
 
-        #webcam-container canvas {
-            border-radius: 10px;
+        #webcam-container {
+            margin-top: 15px;
+        }
+
+        #label-container div {
+            background: #0f0f0f;
             border: 1px solid #333;
-        }
-
-        #label-container > div {
-            background: #111;
             padding: 8px;
-            margin: 6px 0;
             border-radius: 6px;
-            border: 1px solid #333;
+            margin-top: 6px;
             font-size: 14px;
         }
 
-        .suggestion-box {
-            background: #121212;
+        #suggestions {
+            margin-top: 20px;
+            background: #101010;
             padding: 15px;
             border-radius: 10px;
             border: 1px solid #333;
-            margin-top: 20px;
+        }
+
+        footer {
+            text-align: center;
+            padding: 15px;
+            font-size: 14px;
+            color: #777;
         }
     </style>
 </head>
 
 <body>
 
-<header>HatVision — AI Hat Style Detector</header>
+<header>StreetFit AI — Hat Style Scanner</header>
 
 <div class="container">
 
-    <!-- About -->
-    <div class="section">
-        <h2>About the Project</h2>
+    <!-- PROJECT EXPLANATION -->
+    <div class="card">
+        <h2>What Problem Does This Solve?</h2>
         <p>
-            HatVision uses a Teachable Machine image model to analyze your webcam feed in real time.
-            It detects the type of hat you are wearing and provides a clear description of that style.
+            Many people struggle to find hats that match their personal style when shopping online.
+            StreetFit AI solves this by instantly recognizing the type of hat you're wearing and
+            recommending similar styles you might like.
         </p>
         <p>
-            This project demonstrates real-time computer vision, AI classification,
-            and interactive user feedback using TensorFlow.js.
+            This tool is useful for streetwear fans, online shoppers, and fashion brands looking
+            to offer personalized shopping experiences.
         </p>
     </div>
 
-    <!-- AI Model Section -->
-    <div class="section">
-        <h2>Teachable Machine Image Model</h2>
+    <!-- INSTRUCTIONS -->
+    <div class="card">
+        <h2>How to Use</h2>
+        <ol>
+            <li>Click the <strong>Start</strong> button to enable your webcam.</li>
+            <li>Wear a hat (or no hat) and face the camera.</li>
+            <li>The AI will detect your hat type and suggest similar styles.</li>
+        </ol>
 
-        <button type="button" onclick="init()">Start</button>
+        <button onclick="init()">Start</button>
 
         <div id="webcam-container"></div>
         <div id="label-container"></div>
 
-        <div id="suggestions" class="suggestion-box">
-            <h3>Category Description</h3>
-            <p id="category-description">
-                Start the camera to see the detected category and its description.
-            </p>
+        <div id="suggestions">
+            <h3>Style Suggestions</h3>
+            <p>Your recommendations will appear here.</p>
         </div>
     </div>
 
 </div>
 
+<footer>© 2025 StreetFit AI — Smart Style Meets Streetwear</footer>
+
 <!-- SCRIPTS -->
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
 
-<script type="text/javascript">
+<script>
     const URL = "./my_model/";
-
     let model, webcam, labelContainer, maxPredictions;
 
-    // Descriptions for each trained category
-    const categoryDescriptions = {
-        "baseball caps": "A casual, sporty hat with a curved brim, commonly worn for everyday activities and outdoor sports.",
-        "Bucket hat": "A soft hat with a downward-sloping brim, popular for sun protection and streetwear fashion.",
-        "Cowboy hat": "A wide-brimmed hat traditionally associated with Western culture, offering both style and function.",
-        "Fedora": "A structured felt hat with a pinched crown, often worn for formal or smart-casual outfits.",
-        "Beanies": "A snug, knit hat designed to keep your head warm in colder weather.",
-        "no hat": "No hat detected. Try wearing a hat in front of the camera to see style information."
+    const suggestionsMap = {
+        "baseball cap": "You’re rocking a classic streetwear look. You might also like snapbacks, logo caps, or flat-brim urban hats.",
+        "beanie": "Clean and casual. Try cuffed beanies, oversized knit beanies, or minimalist winter styles.",
+        "cowboy hat": "Bold choice. You may also like western-inspired hats or wide-brim statement pieces.",
+        "bucket hat": "Trendy and relaxed. Similar styles include fisherman hats and lightweight summer street hats.",
+        "no hat": "No hat detected. Throw one on to unlock streetwear-inspired recommendations!"
     };
 
     async function init() {
@@ -153,7 +157,6 @@
         await webcam.play();
         window.requestAnimationFrame(loop);
 
-        document.getElementById("webcam-container").innerHTML = "";
         document.getElementById("webcam-container").appendChild(webcam.canvas);
 
         labelContainer = document.getElementById("label-container");
@@ -170,13 +173,13 @@
     }
 
     async function predict() {
-        const prediction = await model.predict(webcam.canvas);
+        const predictions = await model.predict(webcam.canvas);
 
         let bestClass = "";
         let bestProb = 0;
 
-        for (let i = 0; i < maxPredictions; i++) {
-            const p = prediction[i];
+        for (let i = 0; i < predictions.length; i++) {
+            const p = predictions[i];
             labelContainer.childNodes[i].innerHTML =
                 `${p.className}: ${p.probability.toFixed(2)}`;
 
@@ -186,8 +189,10 @@
             }
         }
 
-        document.getElementById("category-description").innerText =
-            categoryDescriptions[bestClass] || "No description available.";
+        document.getElementById("suggestions").innerHTML = `
+            <h3>Style Suggestions</h3>
+            <p>${suggestionsMap[bestClass] || "Try adjusting your position or lighting."}</p>
+        `;
     }
 </script>
 
